tests/whiley/invalid/test_8.wyal
assert "index out of bounds (not less than length)":
    forall(int[] x, int y):
        if:
            y == x[0]
        then:
            1 < |x|


